--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,19 @@
 .page {
-  font-family: Inter, arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Noto Serif", "Times New Roman", serif;
+}
+
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 /* To Code Reviewer: I'm not exactly sure why I'm using index.css vs styles.css? Could you please elaborate on when we'd use one over the other? Thanks! */
