--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,11 @@
 .page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  color: #000000;
 }
 
 h1,
@@ -10,10 +14,125 @@ h3 {
   font-family: "Noto Serif", "Times New Roman", serif;
 }
 
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
+.header {
+  height: 800px;
+  padding: 30px 80px 40px;
+  background: center / cover #fff url(../images/background_header.svg) no-repeat;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-/* To Code Reviewer: I'm not exactly sure why I'm using index.css vs styles.css? Could you please elaborate on when we'd use one over the other? Thanks! */
+.header__title {
+  margin: 183px 0 0;
+  line-height: 1.2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+  max-width: 729px;
+}
+
+.header__span-accent {
+  color: #3f96f3;
+  font-family: "Noto Serif", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  margin-right: 8px;
+  font-family: "Noto Serif";
+  line-height: 72px;
+  display: block;
+}
+
+.header__description {
+  margin: 28px 0 0;
+  max-width: 683px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #333;
+}
+
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  width: 646px;
+  height: 568px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 80px;
+}
+
+.nav__links {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  position: relative;
+  left: -50px;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+  align-items: flex-end;
+}
+
+.header__paragraph {
+  margin: 0;
+}
+
+.recipes {
+  color: #fff;
+  padding: 100px 80px 215px;
+  background: center / cover #0a2750 url(../images/background_recipes.svg)
+    no-repeat;
+  position: absolute;
+}
+
+.recipes__title {
+  margin: 0 0 24px;
+}
+
+.recipes__subtitle {
+  margin: 0 0 80px;
+}
+
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  list-style-type: none;
+}
+
+.recipes__video-caption {
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+}
