--- a/pages/index.css
+++ b/pages/index.css
@@ -111,8 +111,7 @@ h3 {
 .recipes {
   color: #fff;
   padding: 100px 80px 215px;
-  background: center / cover #0a2750 url(../images/background_recipes.svg)
-    no-repeat;
+  background: center / cover #0a2750 url(../images/background_recipes.svg) no-repeat;
   position: absolute;
 }
 
