--- a/pages/index.css
+++ b/pages/index.css
@@ -1,253 +1,18 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
+
 
 h1,
 h2,
 h3 {
   font-family: "Noto Serif", "Times New Roman", serif;
-}
-
-.header {
-  height: 800px;
-  padding: 30px 80px 40px;
-  background: center / cover #fff url(../images/background_header.svg) no-repeat;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.header__title {
-  margin: 183px 0 0;
-  line-height: 1.2;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 5px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  max-width: 729px;
-  z-index: 1;
-}
-
-.header__span-accent {
-  color: #3f96f3;
-  font-family: "Noto Serif", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  margin-right: 8px;
-  font-family: "Noto Serif";
-  line-height: 72px;
-  display: block;
-}
-
-.header__description {
-  margin: 28px 0 0;
-  max-width: 683px;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #333;
-  z-index: 1;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  width: 646px;
-  height: 568px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 80px;
-}
-
-.nav__links {
-  display: flex;
-  gap: 20px;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  position: relative;
-  left: -50px;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  align-items: flex-end;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
-  padding: 100px 80px 215px;
-  margin: 0 auto;
-}
-
-.recipes__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 0 0 24px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 80px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: none;
-  border-radius: 8px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  max-width: 480px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  margin-top: 24px;
-}
-
-.reservation {
-  background-color: #D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 80px;
-  text-align: center; /* centers the content */
-}
-
-.reservation__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #000;
-  margin-bottom: 80px;
-}
-
-.form {
-  max-width: 385px;
-  margin: 0 auto;
-  text-align: left; /* aligns form inputs left while keeping the form centered */
-}
-
-.form__fieldset {
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.form__label {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-  margin-right: 12px;
-  vertical-align: middle;
-  border-radius: 2px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  margin: 32px 0;
-  font-size: 16px;
-}
-
-.form__button {
-  background-color: #1878DC;
-  color: #fff;
-  border: none;
-  width: 100%;
-  padding: 20px;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  cursor: pointer;
-  margin-top: 32px;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.form__button:hover {
-  background-color: #3F96F3;
 }
