--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,8 @@
 .card {
   flex: 1;
   min-width: 250px;
-  max-width: 540px;
-  margin: 0 auto;
+  width: 540px;
+  margin: 0;
 }
 
 .card__title {
@@ -11,10 +11,13 @@
   font-size: 20px;
   line-height: 30px;
   color: #000000;
-  margin-bottom: 16px;
+  margin: 0 0 32px 0;
 }
 
 .card__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -28,7 +31,6 @@
   font-size: 16px;
   line-height: 20px;
   color: #000000;
-  margin-bottom: 8px;
 }
 
 .card__list-divider {
