--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -27,7 +27,7 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 
 .footer__list {
@@ -45,7 +45,6 @@
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
-  opacity: 1;
   transition: opacity 0.3s ease;
 }
 
@@ -64,4 +63,5 @@
   font-size: 16px;
   line-height: 20px;
   text-align: left;
+  margin: 0;
 }
