--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,7 +1,7 @@
 .form {
   max-width: 385px;
   margin: 0 auto;
-  text-align: left; /* aligns form inputs left while keeping the form centered */
+  text-align: left;
 }
 
 .form__fieldset {
@@ -26,6 +26,10 @@
   border: 1px solid #838383;
   border-radius: 4px;
   font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .form__input::placeholder {
@@ -35,7 +39,7 @@
 .form__checkbox {
   width: 20px;
   height: 20px;
-  margin-right: 12px;
+  margin: 0;
   vertical-align: middle;
   border-radius: 2px;
 }
