--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,7 +1,8 @@
+/* This looks significantly worse? Not sure what went wrong here */
+
 .menu {
-  max-width: 780px;
-  margin: 0 auto;
-  padding: 100px 16px;
+  margin: 0;
+  padding: 100px;
   background-color: #ffffff;
   background-image: url("../images/background_menu.svg");
   background-repeat: no-repeat;
@@ -16,7 +17,8 @@
   font-size: 44px;
   line-height: 52px;
   color: #000000;
-  margin-bottom: 24px;
+  margin: 0 0 24px 0;
+  max-width: 780px;
 }
 
 .menu__subtitle {
@@ -24,17 +26,19 @@
   font-size: 20px;
   line-height: 30px;
   color: #000000;
-  margin-bottom: 100px;
+  margin: 0 0 100px 0;
+  max-width: 780px;
 }
 
 .menu__cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 24px;
+  justify-content: space-between;
+  gap: 100px;
   padding: 0;
   margin: 0 auto;
   list-style: none;
-  max-width: 780px;
+  width: 540px;
 }
+
 
