--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,8 +1,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 30px 80px;
+  align-items: flex-start;
 }
 
 .nav__links {
@@ -19,6 +18,10 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+}
+
+.nav__link:hover {
+  opacity: 0.5;
 }
 
 .nav__logo {
