--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -15,6 +15,7 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0 0 24px;
+  max-width: 580px
 }
 
 .recipes__subtitle {
@@ -22,7 +23,7 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  margin-bottom: 80px;
+  margin: 0 0 80px 0;
 }
 
 .recipes__videos {
@@ -49,5 +50,5 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  margin-top: 24px;
+  margin: 24px 0 0 0;
 }
