--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,8 +4,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 100px 80px;
-  text-align: center; /* centers the content */
+  padding: 100px 0 80px 0;
+  text-align: center;
 }
 
 .reservation__title {
@@ -14,5 +14,5 @@
   font-size: 44px;
   line-height: 52px;
   color: #000;
-  margin-bottom: 80px;
+  margin: 0 0 80px 0;
 }
