--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,6 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .header__title {
@@ -64,7 +65,7 @@
 
 .header__paragraph {
   margin: 0;
-  font-family: "Inter";
+  font-family: Inter, Arial, sans-serif; 
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
