--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,6 +1,9 @@
-/* This looks significantly worse? Not sure what went wrong here */
+/* Thanks for your help! */
 
 .menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0;
   padding: 100px;
   background-color: #ffffff;
@@ -8,7 +11,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  text-align: center;
 }
 
 .menu__title {
@@ -19,6 +21,7 @@
   color: #000000;
   margin: 0 0 24px 0;
   max-width: 780px;
+  text-align: center;
 }
 
 .menu__subtitle {
@@ -28,17 +31,15 @@
   color: #000000;
   margin: 0 0 100px 0;
   max-width: 780px;
+  text-align: center;
 }
 
 .menu__cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 100px;
   padding: 0;
   margin: 0 auto;
   list-style: none;
-  width: 540px;
 }
-
-
