--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 100px 0 80px 0;
+  padding: 100px 0 120px 0;
   text-align: center;
 }
 
@@ -16,3 +16,5 @@
   color: #000;
   margin: 0 0 80px 0;
 }
+
+/* Thanks again for your help fixing this!*/
