--- a/blocks/form.css
+++ b/blocks/form.css
@@ -61,7 +61,10 @@
   padding: 20px;
   border-radius: 4px;
   font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
   font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
 }
