--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,7 +14,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 5px;
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -27,11 +26,10 @@
 
 .header__span-accent {
   color: #3f96f3;
-  font-family: "Noto Serif", serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
-  margin-right: 8px;
   line-height: 72px;
   display: block;
 }
@@ -65,7 +63,7 @@
 
 .header__paragraph {
   margin: 0;
-  font-family: Inter, Arial, sans-serif; 
+  font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
